-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0
-
-
72e4cb967 (dev), 8b9c25998 (6.8), a9412bca7 (dev), d59c9d6c7 (dev), 1a55bd974 (6.8)
Reproducer attached. Click the button and the animation severely shutters (even temporarily freezes) when Window is being resized. The problem was there in 6.7.3 but the situation is much worse in 6.8.0. If you do something to the window when it's struggling with resizing, you may very well crash it.
By far only observed on macOS. Windows is unaffected.
- resulted in
-
QTBUG-130354 Rectangle visually not in sync with window background
-
- Reported
-
| For Gerrit Dashboard: QTBUG-129839 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 597766,3 | macOS: Release main thread transaction block as soon as we're done with it | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 598184,8 | macOS: Don't stop display-link once started and window is exposed | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 598369,8 | Defer polishAndSync animation advance to event loop if handling expose | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 598611,2 | macOS: Release main thread transaction block as soon as we're done with it | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
| 599380,2 | Defer polishAndSync animation advance to event loop if handling expose | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |